--- a/site/src/pages/labs.astro
+++ b/site/src/pages/labs.astro
@@ -1,6 +1,7 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Badge from '../components/Badge.astro';
+const base = import.meta.env.BASE_URL;
 ---
 
 <Layout title="Terminal" description="Experiment, verktyg och prototyper i omlopp">
